Updated many dependencies